--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     <div class="section-panels">
                         <div class="section-panel">
                             <div>
-                                <p class="section-panel__text" id="contact"> I don’t have a common way of receiving payments for the creation of websites, but if you want a website specifically from me, reach out to me through this email:</p>
+                                <p class="section-panel__text" id="contact"> I don't have a common way of receiving payments for the creation of websites, but if you want a website specifically from me, reach out to me through this email:</p>
                                 <h2 class="section-panel__title">miked.the.damned@gmail.com</h2>
                             </div>
                         </div>
